Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-19826

10.4 seems to crash with "pool-of-threads"

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Blocker
    • Resolution: Fixed
    • 10.4(EOL)
    • 10.4.8
    • Galera
    • None

    Description

      Might be just me, but in contrast to 10.3 I couldn't make 10.4 work with:

      thread-handling=pool-of-threads

      the database doesn't seem to start... Even a newly setup database with mysql_install_db. Only when I removed that line, the database was running. Sorry that I can't give any more info. I have only one production 10.4 server cluster available and I'm very happy, that it's finally running so I don't want to sacrifice it for experiments.

      Nevertheless, I'm just saying perhaps you might want to double-check this whether it really works. Otherwise feel free to close this as Works-For-Me. I'm on Ubuntu Disco with 10.4.6. Thank you

      Attachments

        Activity

          People

            sysprg Julius Goryavsky (Inactive)
            rgpublic Ranjan Ghosh
            Votes:
            3 Vote for this issue
            Watchers:
            15 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 0d
                0d
                Remaining:
                Time Spent - 5d 7.5h Remaining Estimate - 8d 5.5h
                8d 5.5h
                Logged:
                Time Spent - 5d 7.5h Remaining Estimate - 8d 5.5h
                5d 7.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.